# pockterm

./: .gitignore  CLAUDE.md  LICENSE  README.md  install-menubar.sh  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements-macos.txt  requirements.txt
.claude/: CLAUDE.md
.claude/rules/: public-repo.md  release-and-ship.md
.claude/skills/pockterm/: SKILL.md
.claude/tools/: check-phone.sh  health.sh  run-menubar.sh  ship-apk.sh
.github/workflows/: ci.yml  publish.yml
app/: pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/models/: server_config.dart
app/lib/screens/: pair_screen.dart  terminal_screen.dart
app/lib/services/: keys.dart  pairing.dart  pinned_http.dart  terminal_client.dart
app/lib/theme/: app_theme.dart
app/lib/widgets/: key_toolbar.dart
app/test/: keys_test.dart  server_config_test.dart  terminal_client_test.dart
docs/: DEVICE-E2E-CHECKLIST.md  MENUBAR.md  RELEASE.md
docs/superpowers/plans/: 2026-07-16-pockterm.md  2026-07-17-auto-repair-on-expiry.md  2026-07-17-menubar-persistent-pairing.md  (+5 more)
pockterm/: __main__.py  auth.py  hosts.py  menubar.py  pairing.py  pty_process.py  qrimage.py  rate_limit.py  secretstore.py  server.py  session.py  shells.py
tests/: conftest.py  test_auth.py  test_entrypoint.py  test_hosts.py  test_menubar.py  test_pair_endpoint.py  test_pairing.py  test_pty.py  test_pty_windows.py  test_qrimage.py  test_rate_limit.py  test_secretstore.py  test_session.py  test_shells.py  test_ws.py
(+10 files in other folders)
